--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -10,5 +10,6 @@
 <body>
 <div id="app"></div>
 <script type="module" src="/src/main.ts"></script>
+<script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 </body>
 </html>
